# adventofcode

./: .gitignore  README.md
2015/3/: 1.js
2017/ruby/: 2.rb  41.rb  62.rb
2018/: 1_1.js  2_2.js  3_2.js  4_1.js  4_2.js
2018/10/: 10_1_2.js
2018/2/: 2_1.js
2018/3/: 3_1.js
2018/4/: 4_1.js
2018/5/: 5_1.js
2018/6/: 6_2.js  out.txt
2018/7/: 7_1.js
2018/9/: 9_2.cpp
2019/5/: 1.c
2019/6/: 2.js
2019/8/: 1.js  2.js
2020/2/: 2_1.js  2_2.js
2020/3/: 1.js  2.js
2020/5/: 1.js
cpp/: Makefile  aoc
ruby/: .71.rb.swp
year-2015/1/: day_1_1.scala  day_1_2.scala  main.hs
year-2015/2/: main.hs
year-2015/3/: 2.js  in
year-2016/1/: main.rs
year-2016/2/: main.rs
year-2017/cpp/: aoc.cpp
year-2017/ruby/: 51.rb  61.rb  71.rb  81.rb
year-2018/1/: 1_2.js
year-2018/4/: 4_2.js
year-2018/5/: 5_1.js  5_2.js
year-2018/6/: 6_1.js
year-2018/9/: 9_1.js
year-2019/10/: 1.c
year-2019/2/: app.js
year-2019/3/: 1.php  2.php
year-2019/4/: app.js
year-2019/5/: 1.c
year-2019/6/: 1.js
year-2019/8/: 1.js
year-2020/: Cargo.toml
year-2020/src/11/: main.js
year-2020/src/4/: 1.js
year-2020/src/6/: main.rs
year-2020/src/7/: main.js
year-2020/src/8/: input  main.rs
year-2021/: Cargo.toml
year-2021/1/: main.rs
year-2021/2/: main.rs
year-2021/3/: main.rs
year-2021/6/: main.rs
year-2022/: 1.js  10.js  12.js  2.js  3.js  4.js  5.js  6.js  7.js  8.js  9.js
year-2023/1/: main.js
year-2023/2/: main.js
year-2024/: package-lock.json  package.json
year-2024/src/: index.js
year-2024/src/1/: main.js
year-2025/: d1.scala  d2.scala
(+14 files in other folders)
