[package]
name = "year-2020"
version = "0.1.0"
authors = ["Eduard Ilin <kaminarifox@gmail.com>"]
edition = "2018"

[[bin]]
name = "6"
path = "src/6/main.rs"

[[bin]]
name = "8"
path = "src/8/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
